force-app/main/default/objects/Duplicate_Record__mdt/Duplicate_Record__mdt.object-meta.xml
<CustomObject>
    <label>Duplicate Record</label>
    <pluralLabel>Duplicate Records</pluralLabel>
</CustomObject>