force-app/main/default/objects/Duplicate_Record__mdt/fields/boschPartnerNumber__c.field-meta.xml
<CustomField>
    <fullName>boschPartnerNumber__c</fullName>
    <label>boschPartnerNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>