force-app/main/default/objects/Duplicate_Record__mdt/fields/boschPartnerRole__c.field-meta.xml
<CustomField>
    <fullName>boschPartnerRole__c</fullName>
    <label>boschPartnerRole</label>
    <length>10</length>
    <type>Text</type>
</CustomField>