force-app/main/default/objects/Duplicate_Record__mdt/fields/countryCode__c.field-meta.xml
<CustomField>
    <fullName>countryCode__c</fullName>
    <label>countryCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>