force-app/main/default/objects/Duplicate_Record__mdt/fields/houseNumber__c.field-meta.xml
<CustomField>
    <fullName>houseNumber__c</fullName>
    <label>houseNumber</label>
    <length>5</length>
    <type>Text</type>
</CustomField>