force-app/main/default/objects/Duplicate_Record__mdt/fields/matchingScore__c.field-meta.xml
<CustomField>
    <fullName>matchingScore__c</fullName>
    <label>matchingScore</label>
    <length>3</length>
    <type>Text</type>
</CustomField>