force-app/main/default/objects/Duplicate_Record__mdt/fields/organizationName2__c.field-meta.xml
<CustomField>
    <fullName>organizationName2__c</fullName>
    <label>organizationName2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>