force-app/main/default/objects/Duplicate_Record__mdt/fields/organizationName3__c.field-meta.xml
<CustomField>
    <fullName>organizationName3__c</fullName>
    <label>organizationName3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>