force-app/main/default/objects/Duplicate_Record__mdt/fields/organizationName4__c.field-meta.xml
<CustomField>
    <fullName>organizationName4__c</fullName>
    <label>organizationName4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>