force-app/main/default/objects/Duplicate_Record__mdt/fields/postalCode__c.field-meta.xml
<CustomField>
    <fullName>postalCode__c</fullName>
    <label>postalCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>