force-app/main/default/objects/Duplicate_Record__mdt/fields/street__c.field-meta.xml
<CustomField>
    <fullName>street__c</fullName>
    <label>street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>